[project]
name = "langraphchatbot-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-groq>=0.3.2",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
    "tavily-python>=0.7.8",
]
